# LeLu

./: .gitignore  pyproject.toml
lelu/: manage.py
lelu/core/templates/core/: index.html
lelu/core/templates/core/base/: footer.html  layout.html  navbar.html
lelu/lelu/: asgi.py  settings.py  wsgi.py
